# QtOpenCV_VideoTransmission

./: .gitignore
OpenCVCheckFFmpeg/: CMakeLists.txt  main.cpp
UDPVideoReception/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
UDPVideoTransmission/: CMakeLists.txt  main.cpp
UdpClientTest/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
UdpServerTest/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  randomnumberthread.cpp  randomnumberthread.h
